<resources>
    <string name="app_name">移动护理</string>
    <!--<string name="app_name">ClinicalMobileNursingSystem</string>-->
    <string name="login_username">登录名</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password">密码</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="working_team">工作组</string>
    <string name="login">登录</string>
    <string name="technical_support">技术支持：成都旌旗数码科技有限公司</string>
    <string name="clinical_mobile_care_terminal">临床移动护理终端</string>
    <string name="nursing_clerk">护理工作员</string>
    <string name="medical_orders_treating">医嘱处理</string>
    <string name="medical_orders_executive">医嘱执行</string>
    <string name="care_to_collect">护理采集</string>
    <string name="information_search">信息查询</string>
    <string name="logout">退出登录</string>
    <string name="back">返回</string>
    <string name="pending">待处理</string>
    <string name="already_transfer_copy">已转抄</string>
    <string name="already_proofread">已校对</string>
    <string name="already_executive">已执行</string>
    <string name="already_dispensing">已发药</string>
    <string name="input_bed_num">输入床位号</string>
    <string name="patient_name">姓名:</string>
    <string name="patient_sex">性别:</string>
    <string name="patient_age">年龄:</string>
    <string name="patient_bed_num">床位号:</string>
    <string name="medical_orders_copy">医嘱转抄</string>
    <string name="strap_identify">腕带标识</string>
    <string name="bedside_card">床头卡</string>
    <string name="hint">预设内容</string>
    <string name="executive_all">全部执行</string>
    <string name="executive">执行</string>
    <string name="property">属性</string>
    <string name="advice_project">医嘱项目</string>
    <string name="standard">规格</string>
    <string name="unit">单位</string>
    <string name="dosage">剂量</string>
    <string name="temperature_chart">体温单</string>
    <string name="bed_num">床位号</string>
    <string name="temperature">体温</string>
    <string name="pulse">脉搏</string>
    <string name="breathe">呼吸</string>
    <string name="blood_glucose">血糖</string>
    <string name="introduce_quantity">引入量</string>
    <string name="output_quantity">输出量</string>
    <string name="systolic_pressure">收缩压</string>
    <string name="height">身高</string>
    <string name="diastolic_pressure">舒张压</string>
    <string name="weight">体重</string>
    <string name="ml">ml</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="bowel_frequency">大便次数</string>
    <string name="import_the_last_record">导入上次记录</string>
    <string name="save">保存</string>
    <string name="nursing_record">护理记录</string>
    <string name="progress_note">病程记录</string>
    <string name="cost_breakdown">费用明细</string>
    <string name="first">首页</string>
    <string name="last">末页</string>
    <string name="next">下一条</string>
    <string name="previous">上一条</string>
    <string name="tally_administrative_office">记账科室</string>
    <string name="tally_person">记账人员</string>
    <string name="tally_time">记账时间</string>
    <string name="nurse_time">护理时间</string>
    <string name="nurse_level">护理级别</string>
    <string name="nurse_describe">护理描述</string>
    <string name="record_administrative_office">记录科室</string>
    <string name="record_person">记录人员</string>
    <string name="record_time">记录时间</string>
    <string name="progress_note_detail">病程记录</string>
    <string name="total_cost">总费用</string>
    <string name="deposit_amount">预交金</string>

    <string name="clinical_mobile_nursing_terminal">临床移动护理终端</string>
    <string name="clinical_mobile_nursing_system">临床移动护理系统</string>、

    <string name="different">两次获取的患者信息不一致</string>
    <string name="capture_album" >打开文件</string>
    <string name="capture_decode_failed">检查文件是否正确</string>
    <string name="capture_camera_failed">照相机不支持</string>
</resources>
