<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout_title"
        android:layout_width="match_parent"
        android:layout_height="148px"
        android:background="@drawable/shape_background_title"
        >

        <RelativeLayout
            android:id="@+id/relativeLayout_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="24px"
            android:layout_marginLeft="32px"
            >

            <ImageView
                android:id="@+id/imageView_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/repeat"
                android:tint="@color/colorWhite"
                />

            <TextView
                android:id="@+id/textView_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8px"
                android:layout_toRightOf="@+id/imageView_back"
                android:text="@string/back"
                android:textColor="@color/colorWhite"
                android:textSize="32px"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="16px"
            android:text="@string/medical_orders_executive"
            android:textColor="@color/colorWhite"
            android:textSize="37px"
            />

        <RelativeLayout
            android:id="@+id/relativeLayout_scan"
            android:layout_width="100px"
            android:layout_height="100px"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="24px"
            android:layout_marginRight="32px"

            >

            <ImageView
                android:id="@+id/imageView_scan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@mipmap/qr_code"
                android:tint="@color/colorWhite"
                />

        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout_strap_and_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout_title"
        android:layout_marginTop="20px"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="86px">

            <TextView
                android:id="@+id/textView_strap_identify"
                android:layout_width="156px"
                android:layout_height="match_parent"
                android:layout_marginLeft="30px"
                android:gravity="center"
                android:text="@string/strap_identify"
                android:textColor="@color/colorBlack"
                android:textSize="34px"
                />

            <EditText
                android:id="@+id/editText_strap_identify"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="44px"
                android:layout_toRightOf="@+id/textView_strap_identify"
                android:hint="@string/hint"
                android:textColor="@color/colorEditTextFinish"
                android:textColorHint="@color/colorEditHint"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:textSize="34px"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="text"
                />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLine"
            ></View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="86px">

            <TextView
                android:id="@+id/textView_bedside_card"
                android:layout_width="156px"
                android:layout_height="match_parent"
                android:layout_marginLeft="30px"
                android:gravity="center"
                android:text="@string/bedside_card"
                android:textColor="@color/colorBlack"
                android:textSize="34px"
                />

            <EditText
                android:id="@+id/editText_bedside_card"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="44px"
                android:layout_toRightOf="@+id/textView_bedside_card"
                android:hint="@string/hint"
                android:textColor="@color/colorEditTextFinish"
                android:textColorHint="@color/colorEditHint"
                android:textCursorDrawable="@drawable/shape_edittext_cursor"
                android:textSize="34px"
                android:background="@null"
                android:imeOptions="actionDone"
                android:inputType="text"
                />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_information"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_below="@+id/linearLayout_strap_and_num"
        android:layout_marginTop="20px"
        android:background="@color/colorWhite"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView_patient_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="30px"
            android:layout_marginTop="32px"
            android:text="@string/patient_name"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_name_show"
            android:layout_width="136px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="10px"
            android:layout_marginTop="32px"
            android:text="一二三四五"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="16px"
            android:layout_marginTop="32px"
            android:text="@string/patient_sex"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_sex_show"
            android:layout_width="64px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="10px"
            android:layout_marginTop="32px"
            android:text="男"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="16px"
            android:layout_marginTop="32px"
            android:text="@string/patient_age"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_age_show"
            android:layout_width="64px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="10px"
            android:layout_marginTop="32px"
            android:text="35"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_bed_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="16px"
            android:layout_marginTop="32px"
            android:text="@string/patient_bed_num"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />

        <TextView
            android:id="@+id/textView_patient_bed_num_show"
            android:layout_width="88px"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32px"
            android:layout_marginLeft="10px"
            android:layout_marginTop="32px"
            android:text="A01"
            android:textColor="@color/colorMainText"
            android:textSize="28px"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="100px"
        android:layout_below="@+id/linearLayout_strap_and_num"
        android:layout_marginTop="20px"
        android:text="@string/different"
        android:gravity="center"
        android:textColor="@color/colorBlack"
        android:textSize="34px"
        android:visibility="invisible"
        android:background="@color/colorWhite"
        />

    <ListView
        android:id="@+id/listView_medical_order_executive"
        android:layout_width="match_parent"
        android:layout_height="528px"
        android:layout_below="@+id/linearLayout_information"
        android:layout_marginTop="20px"
        android:background="@color/colorWhite"
        android:divider="@drawable/shape_listview_divider"
        ></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_below="@+id/listView_medical_order_executive"
        android:layout_marginTop="20px"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/button_executive"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:background="@drawable/shape_button_medical_order_trearing"
            android:text="@string/executive"
            android:textColor="@color/colorWhite"
            android:textSize="36px"
            />

        <Button
            android:id="@+id/button_executive_all"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/shape_button_medical_order_trearing"
            android:text="@string/executive_all"
            android:textColor="@color/colorWhite"
            android:textSize="36px"/>

    </LinearLayout>

    <include layout="@layout/bottom_item"></include>
</RelativeLayout>