<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >
    <LinearLayout
        android:id="@+id/linearLayout_button"
        android:layout_width="match_parent"
        android:layout_height="88px"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120px"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/button_first"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:background="@drawable/shape_button_choose"
            android:text="@string/first"
            android:textColor="@color/colorButtonChooseTextColor"
            android:textSize="26px"
            />
        <Button
            android:id="@+id/button_previous"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:background="@drawable/shape_button_choose"
            android:text="@string/previous"
            android:textColor="@color/colorEditTextFinish"
            android:textSize="26px"
            />

        <Button
            android:id="@+id/button_next"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_weight="1"
            android:background="@drawable/shape_button_choose"
            android:text="@string/next"
            android:textColor="@color/colorEditTextFinish"
            android:textSize="26px"/>
        <Button
            android:id="@+id/button_last"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:layout_weight="1"
            android:background="@drawable/shape_button_choose"
            android:text="@string/last"
            android:textColor="@color/colorEditTextFinish"
            android:textSize="26px"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout_button"
        android:layout_marginBottom="32px"
        android:background="@color/colorWhite"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40px"
            android:layout_marginBottom="40px"
            android:layout_marginRight="32px"
            android:layout_marginLeft="32px"
            android:orientation="vertical"
            android:background="@color/colorWhite"
            >
            <RelativeLayout
                android:id="@+id/relativeLayout_record_administrative_office"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textView_record_administrative_office"
                    android:layout_width="170px"
                    android:layout_height="wrap_content"
                    android:text="@string/record_administrative_office"
                    android:textSize="30px"
                    android:textColor="@color/colorFragmentText"
                    />
                <TextView
                    android:id="@+id/textView_record_administrative_office_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_record_administrative_office"
                    android:layout_marginLeft="10px"
                    android:textSize="30px"
                    android:textColor="@color/colorEditTextFinish"
                    android:text="正畸科"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_record_person"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                >
                <TextView
                    android:id="@+id/textView_record_person"
                    android:layout_width="170px"
                    android:layout_height="wrap_content"
                    android:text="@string/record_person"
                    android:textSize="30px"
                    android:textColor="@color/colorFragmentText"
                    />
                <TextView
                    android:id="@+id/textView_record_person_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_record_person"
                    android:layout_marginLeft="10px"
                    android:textSize="30px"
                    android:textColor="@color/colorEditTextFinish"
                    android:text="张三"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_record_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                >
                <TextView
                    android:id="@+id/textView_record_time"
                    android:layout_width="170px"
                    android:layout_height="wrap_content"
                    android:text="@string/record_time"
                    android:textSize="30px"
                    android:textColor="@color/colorFragmentText"
                    />
                <TextView
                    android:id="@+id/textView_record_time_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_record_time"
                    android:layout_marginLeft="10px"
                    android:textSize="30px"
                    android:textColor="@color/colorEditTextFinish"
                    android:text="2017-6-20"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_progress_note_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32px"
                >
                <TextView
                    android:id="@+id/textView_progress_note_detail"
                    android:layout_width="170px"
                    android:layout_height="wrap_content"
                    android:text="@string/progress_note_detail"
                    android:textSize="30px"
                    android:textColor="@color/colorFragmentText"
                    />
                <TextView
                    android:id="@+id/textView_progress_note_detail_show"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textView_progress_note_detail"
                    android:layout_marginLeft="10px"
                    android:textSize="30px"
                    android:textColor="@color/colorEditTextFinish"
                    android:text="描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述描述"
                    />
            </RelativeLayout>
        </LinearLayout>

    </ScrollView>


</RelativeLayout>