<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="444px"
        android:background="@drawable/shape_login_backgroud"
        >

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/roundedImageView"
            android:layout_width="134px"
            android:layout_height="134px"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="128px"
            android:scaleType="center"
            android:src="@mipmap/isoeix"
            app:riv_border_color="@color/colorMainWhite"
            app:riv_border_width="10px"
            app:riv_corner_radius="100dp"
            app:riv_oval="true"
            />

        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/roundedImageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16px"
            android:text="@string/nursing_clerk"
            android:textColor="@color/colorWhite"
            android:textSize="24px"
            />

        <ImageView
            android:id="@+id/image_wave"
            android:layout_width="match_parent"
            android:layout_height="116px"
            android:layout_marginTop="328px"
            android:scaleType="center"
            android:src="@mipmap/person_head_wave"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="444px"
        android:background="@color/colorWhite"
        >

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="56px"
            android:divider="@drawable/shape_linearlayout_mid"
            android:dividerPadding="24dp"
            android:orientation="horizontal"
            android:showDividers="middle"
            >

            <RelativeLayout
                android:id="@+id/relativeLayout_medical_orders_treating"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/imageView_medical_orders_treating"
                    android:layout_width="88px"
                    android:layout_height="88px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@mipmap/person_center_01"
                    />

                <TextView
                    android:id="@+id/textView_medical_orders_treating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView_medical_orders_treating"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30px"
                    android:layout_marginTop="15px"
                    android:text="@string/medical_orders_treating"
                    android:textColor="@color/colorMainText"
                    android:textSize="28px"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_medical_orders_executive"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/imageView_medical_orders_executive"
                    android:layout_width="88px"
                    android:layout_height="88px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@mipmap/person_center_02"
                    />

                <TextView
                    android:id="@+id/textView_medical_orders_executive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView_medical_orders_executive"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30px"
                    android:layout_marginTop="15px"
                    android:text="@string/medical_orders_executive"
                    android:textColor="@color/colorMainText"
                    android:textSize="28px"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_care_to_collect"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/imageView_care_to_collect"
                    android:layout_width="88px"
                    android:layout_height="88px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@mipmap/person_center_03"
                    />

                <TextView
                    android:id="@+id/textView_care_to_collect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView_care_to_collect"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30px"
                    android:layout_marginTop="15px"
                    android:text="@string/care_to_collect"
                    android:textColor="@color/colorMainText"
                    android:textSize="28px"
                    />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout_information_search"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >

                <ImageView
                    android:id="@+id/imageView_information_search"
                    android:layout_width="88px"
                    android:layout_height="88px"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30px"
                    android:src="@mipmap/person_center_01"
                    />

                <TextView
                    android:id="@+id/textView_information_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView_information_search"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30px"
                    android:layout_marginTop="15px"
                    android:text="@string/information_search"
                    android:textColor="@color/colorMainText"
                    android:textSize="28px"
                    />

            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/button_logout"
            android:layout_width="match_parent"
            android:layout_height="88px"
            android:layout_below="@+id/linearLayout"
            android:layout_marginLeft="32px"
            android:layout_marginRight="32px"
            android:layout_marginTop="60px"
            android:background="@drawable/shape_button_login"
            android:text="@string/logout"
            android:textColor="@color/colorWhite"
            android:textSize="36px"
            />

        <include layout="@layout/bottom_item"></include>
    </RelativeLayout>
</RelativeLayout>